Added favicons and footerin index.html

--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
            Feel free to explore and learn more about my work.</p>
         <p>To learn more about my background and skills, check out my <a href="resume.html">resume</a>. Thanks for stopping by!</p>
     </main>
+     <footer>
+        <p>© 2024 by Rohith Ganesh Kanchi <a href="mailto:rohithganesh.kanchi2023@vitstudent.ac.in">rohithganesh.kanchi2023@vitstudent.ac.in</a></p>
+        <ul class="socials"> <li>
+                <a href="https://www.linkedin.com/in/rohith-ganesh-kanchi/" target="_blank"><img src="static/images/linkedin.png" alt="LinkedIn Profile"></a>
+            </li>
+            <li>
+                <a href="https://leetcode.com/u/RohithGaneshKanchi/" target="_blank"><img src="static/images/leetcode.png" alt="LeetCode Profile"></a> </li>
+            <li>
+                <a href="https://www.youtube.com/@rgk9252" target="_blank"><img src="static/images/yt.png" alt="YouTube Channel"></a> </li>
+            <li>
+                <a href="https://www.instagram.com/rohith._.gk/" target="_blank"><img src="static/images/insta.png" alt="Instagram Profile"></a>
+            </li>
+            <li>
+                <a href="https://github.com/rZk1809" target="_blank"><img src="static/images/github.png" alt="GitHub Profile"></a> </li>
+        </ul>
+    </footer>
 </body>
 </html>
