--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css">
 </head>
-<body class="home"> <header>
+<body class="home"> 
+  <div class="content-wrapper">
+      <header>
         <h1>Rohith Ganesh Kanchi</h1>
         <h2>An Aspiring Student</h2>
-    </header>
+     </header>
 
     <main>
          <p>Hello! This is Rohith Ganesh Kanchi, a passionate and driven student eager to learn and contribute.
@@ -24,6 +26,7 @@
            Feel free to explore and learn more about my work.</p>
         <p>To learn more about my background and skills, check out my <a href="resume.html">resume</a>. Thanks for stopping by!</p>
     </main>
+  </div>
      <footer>
         <p>© 2024 by Rohith Ganesh Kanchi <a href="mailto:rohithganesh.kanchi2023@vitstudent.ac.in">rohithganesh.kanchi2023@vitstudent.ac.in</a></p>
         <ul class="socials"> <li>
