--- a/resume.html
+++ b/resume.html
@@ -43,9 +43,9 @@
 
             <div class="project-wrapper">
                 <section class="project-item">
-                    <img src="static/images/index.png" 
+                    <img src="/static/images/index.png" 
                          alt="Personal Portfolio Website Screenshot" 
-                         srcset="static/images/index.png 2x"> 
+                         srcset="/static/images/index.png 2x"> 
                     <h3>Personal Portfolio Website</h3>
                     <p>
                         A clean and responsive personal portfolio website (this site!) built from scratch using only HTML and CSS. 
@@ -56,9 +56,9 @@
                     </section>
                   
                 <section class="project-item">
-                    <img src="static/images/ecocon.png" 
+                    <img src="/static/images/ecocon.png" 
                          alt="Basic HTML/CSS Project Screenshot"
-                         srcset="static/images/ecocon.png 2x">
+                         srcset="/static/images/ecocon.png 2x">
                     <h3>EcoCon-QuizApp</h3>
                     <p>
                         Quiz Website for Conservation Economics NPTEL Course that was developed based on Generative AI.
@@ -68,7 +68,7 @@
                 </section>
 
                 <section class="project-item">
-                    <img src="../static/images/crypto.png" 
+                    <img src="/static/images/crypto.png" 
                          alt="Basic HTML/CSS Project Screenshot"
                          srcset="../static/images/crypto.png 2x">
                     <h3>CryptoSliceImage</h3>
