Updated CSS and paths

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <a href="https://www.linkedin.com/in/rohith-ganesh-kanchi/" target="_blank"><img src="static/images/linkedin.png" alt="LinkedIn Profile"></a>
             </li>
             <li>
-                <a href="https://leetcode.com/u/RohithGaneshKanchi/" target="_blank"><img src="static/images/leetcode.png" alt="LeetCode Profile"></a> </li>
+                <a href="https://leetcode.com/u/RohithGaneshKanchi/" target="_blank"><img src="images/leetcode.png" alt="LeetCode Profile"></a> </li>
             <li>
-                <a href="https://www.youtube.com/@rgk9252" target="_blank"><img src="static/images/yt.png" alt="YouTube Channel"></a> </li>
+                <a href="https://www.youtube.com/@rgk9252" target="_blank"><img src="images/yt.png" alt="YouTube Channel"></a> </li>
             <li>
-                <a href="https://www.instagram.com/rohith._.gk/" target="_blank"><img src="static/images/insta.png" alt="Instagram Profile"></a>
+                <a href="https://www.instagram.com/rohith._.gk/" target="_blank"><img src="images/insta.png" alt="Instagram Profile"></a>
             </li>
             <li>
-                <a href="https://github.com/rZk1809" target="_blank"><img src="static/images/github.png" alt="GitHub Profile"></a> </li>
+                <a href="https://github.com/rZk1809" target="_blank"><img src="images/github.png" alt="GitHub Profile"></a> </li>
         </ul>
     </footer>
 </body>
