--- a/resume.html
+++ b/resume.html
@@ -43,9 +43,9 @@
 
             <div class="project-wrapper">
                 <section class="project-item">
-                    <img src="static/images/index.png" 
+                    <img src="images/index.png" 
                          alt="Personal Portfolio Website Screenshot" 
-                         srcset="static/images/index.png 2x"> 
+                         srcset="images/index.png 2x"> 
                     <h3>Personal Portfolio Website</h3>
                     <p>
                         A clean and responsive personal portfolio website (this site!) built from scratch using only HTML and CSS. 
@@ -56,9 +56,9 @@
                     </section>
                   
                 <section class="project-item">
-                    <img src="static/images/ecocon.png" 
+                    <img src="images/ecocon.png" 
                          alt="Basic HTML/CSS Project Screenshot"
-                         srcset="static/images/ecocon.png 2x">
+                         srcset="images/ecocon.png 2x">
                     <h3>EcoCon-QuizApp</h3>
                     <p>
                         Quiz Website for Conservation Economics NPTEL Course that was developed based on Generative AI.
@@ -68,9 +68,9 @@
                 </section>
 
                 <section class="project-item">
-                    <img src="static/images/crypto.png" 
+                    <img src="images/crypto.png" 
                          alt="Basic HTML/CSS Project Screenshot"
-                         srcset="static/images/crypto.png 2x">
+                         srcset="images/crypto.png 2x">
                     <h3>CryptoSliceImage</h3>
                     <p>
                         Secure image sharing using Shamir's (SSS), CRT-based, & Visual Cryptography. 
@@ -81,9 +81,9 @@
                 </section>
 
                 <section class="project-item">
-                    <img src="static/images/msf.png" 
+                    <img src="images/msf.png" 
                          alt="Basic HTML/CSS Project Screenshot"
-                         srcset="static/images/msf.png 2x">
+                         srcset="images/msf.png 2x">
                     <h3>MSFWinBreakdown</h3>
                     <p>
                         Hands-on Windows penetration testing guide using Metasploit. Covers lab setup (Kali, Metasploitable3), 
@@ -159,23 +159,23 @@
         <ul class="socials">
             <li>
                 <a href="https://www.linkedin.com/in/rohith-ganesh-kanchi/" target="_blank">
-                    <img src="static/images/linkedin.png" alt="LinkedIn"></a>
+                    <img src="images/linkedin.png" alt="LinkedIn"></a>
             </li>
             <li>
                 <a href="https://github.com/rZk1809" target="_blank">
-                    <img src="static/images/github.png" alt="GitHub"></a>
+                    <img src="images/github.png" alt="GitHub"></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/rohith._.gk/" target="_blank">
-                    <img src="static/images/insta.png" alt="Instagram"></a>
+                    <img src="images/insta.png" alt="Instagram"></a>
             </li>
             <li>
                 <a href="https://leetcode.com/u/RohithGaneshKanchi/" target="_blank">
-                    <img src="static/images/leetcode.png" alt="LeetCode"></a>
+                    <img src="images/leetcode.png" alt="LeetCode"></a>
             </li>
              <li>
                 <a href="https://www.youtube.com/@rgk9252" target="_blank"> 
-                    <img src="static/images/yt.png" alt="YouTube"></a>
+                    <img src="images/yt.png" alt="YouTube"></a>
             </li>
         </ul>
     </footer>
