--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <footer>
         <p>© 2025 by Rohith Ganesh Kanchi <a href="mailto:rohithganesh.kanchi2023@vitstudent.ac.in">rohithganesh.kanchi2023@vitstudent.ac.in</a></p>
         <ul class="socials"> <li>
-                <a href="https://www.linkedin.com/in/rohith-ganesh-kanchi/" target="_blank"><img src="static/images/linkedin.png" alt="LinkedIn Profile"></a>
+                <a href="https://www.linkedin.com/in/rohith-ganesh-kanchi/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn Profile"></a>
             </li>
             <li>
                 <a href="https://leetcode.com/u/RohithGaneshKanchi/" target="_blank"><img src="images/leetcode.png" alt="LeetCode Profile"></a> </li>
